Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://eldevos.github.io/Encoders"
+  "homepage": "https://EdMasterdev.github.io/Encoders"
 }
